// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-renders preview page after preview is loaded 1`] = `
<PreviewPage
  editTemplatePath="/templates/edit/test-template"
  getDraftAndPreview={[Function]}
  loading={false}
  match={
    Object {
      "params": Object {
        "id": "test-template",
      },
    }
  }
  mode="draft"
/>
`;

exports[`renders preview page when loading preview 1`] = `
<PreviewPage
  editTemplatePath="/templates/edit/test-template"
  getDraftAndPreview={[Function]}
  loading={true}
  match={
    Object {
      "params": Object {
        "id": "test-template",
      },
    }
  }
  mode="draft"
/>
`;
